Add js to remove element

--- a/store.html
+++ b/store.html
@@ -4,7 +4,8 @@
     <head>
         <title>The Generics | Store</title>
         <meta name="description" content="This is the description">
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles.css">
+        <script src="store.js" defer></script>
     </head>
 
     <body>
@@ -76,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="container content-section">
+        <section class="shopping-cart-container container content-section">
             <h2 class="section-header">CART</h2>
             <div class="cart-row">
                 <span class="cart-item cart-header cart-column">ITEM</span>
@@ -92,7 +93,7 @@
                     <span class="cart-price cart-column">$19.99</span>
                     <div class="cart-quantity cart-column">
                         <input class="cart-quantity-input" type="number" value="1">
-                        <button class="btn btn-danger" type="button">REMOVE</button>
+                        <button class="btn btn-remove-item btn-danger" type="button">REMOVE</button>
                     </div>
                 </div>
                 <div class="cart-row">
@@ -103,7 +104,7 @@
                     <span class="cart-price cart-column">$9.99</span>
                     <div class="cart-quantity cart-column">
                         <input class="cart-quantity-input" type="number" value="2">
-                        <button class="btn btn-danger" type="button">REMOVE</button>
+                        <button class="btn btn-remove-item btn-danger" type="button">REMOVE</button>
                     </div>
                 </div>
             </div>
@@ -119,17 +120,17 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/YouTube-Logo.png">
+                            <img src="./Images/Youtube-Logo.png">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.spotify.com" target="_blank">
-                            <img src="Images/Spotify-Logo.png">
+                            <img src="./Images/Spotify-Logo.png">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
-                            <img src="Images/Facebook-Logo.png">
+                            <img src="./Images/Facebook-Logo.png">
                         </a>
                     </li>
                 </ul>
